shape type enum
